feat: [#3658] V6 profile migration
