# app/serializers/api/v1/search/service_serializer.rb
@@ -3,19 +3,16 @@
 class Api::V1::Search::ServiceSerializer < ApplicationSerializer
   include ImageHelper
 
-  attribute :marketplace_locations, key: :research_activities
   attributes :pid,
              :name,
              :slug,
-             :tagline,
              :description,
              :rating,
              :score,
              :path,
              :logo,
              :scientific_domains,
-             :target_users,
-             :platforms,
+             :jurisdiction,
              :resource_organisation,
              :providers,
              :source_node_url
@@ -45,10 +42,16 @@ class Api::V1::Search::ServiceSerializer < ApplicationSerializer
     object.providers.map { |p| Api::V1::Search::ProviderSerializer.new(p).as_json }
   end
 
-  %i[scientific_domains target_users platforms marketplace_locations].each do |relation|
+  %i[scientific_domains].each do |relation|
     define_method(relation) do
       object.public_send(relation).map { |item| Api::V1::Search::FilterSerializer.new(item).as_json }
     end
+  end
+
+  def jurisdiction
+    return nil unless object.jurisdiction
+
+    Api::V1::Search::FilterSerializer.new(object.jurisdiction).as_json
   end
 
   private
